# 08-kafka-streaming

./: README.md  docker-compose.yml  pyproject.toml
kafka-consumer/: .env  kafka-consumer.py
kafka-producer/: .env  kafka-producer.py
market-project/: docker-compose.yml
market-project/consumer/: .env  consumer.py
market-project/dashboard/: .env  dashboard.py
market-project/producer/: producer.py
