[tool.poetry]
name = "08-kafka-streaming"
version = "0.1.0"
description = ""
authors = ["hmaiajunior <juniorce04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.8.0"
faker = "^36.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
